--- a/app/src/main/res/layout/card_item_inicio_alumnos.xml
+++ b/app/src/main/res/layout/card_item_inicio_alumnos.xml
@@ -1,37 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/inicio_cardview_alumnos"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="132dp"
-    android:padding="10dp"
-    card_view:cardElevation="6dp"
-    card_view:cardCornerRadius="6dp"
+    android:layout_width="180dp"
+    android:layout_height="180dp"
     android:layout_marginStart="6dp"
-    android:layout_marginEnd="6dp"
     android:layout_marginTop="6dp"
+    android:layout_marginEnd="6dp"
     android:layout_marginBottom="8dp"
     android:clickable="true"
     android:focusable="true"
-    card_view:cardBackgroundColor="@color/cardview_light_background"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical"
+    android:padding="10dp"
+    card_view:cardBackgroundColor="@color/colorPrimaryAlpha"
+    card_view:cardCornerRadius="90dp"
+    card_view:cardElevation="0dp">
 
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="124dp">
+        android:layout_width="180dp"
+        android:layout_height="180dp">
+
+
         <TextView
             android:id="@+id/nombre"
-            android:layout_width="146dp"
-            android:layout_height="38dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="148dp"
             android:layout_marginBottom="0dp"
-            android:text="nombreee"
-            android:textColor="#000" />
+            android:text="Materia"
+            android:textAlignment="center"
+            android:textColor="#454444"
+            android:textStyle="bold" />
 
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/foto_materia"
+            android:layout_width="105dp"
+            android:layout_height="107dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="43dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="32dp"
+            android:src="@drawable/matematica"
+            app:civ_border_color="#FF000000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.506"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </RelativeLayout>
