--- a/app/src/main/res/layout/fragment_inicio_ejm.xml
+++ b/app/src/main/res/layout/fragment_inicio_ejm.xml
@@ -3,26 +3,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryAlpha"
     tools:context="com.example.educasa.Inicio.InicioFragments.InicioEjm">
-    <android.support.v7.widget.Toolbar
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="197dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/colorPrimary"
+        android:src="@drawable/kraken"
+        app:layout_constraintBottom_toTopOf="@+id/inicio_recycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <SearchView
         android:id="@+id/inicio_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryAlpha"
+        android:layout_width="309dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="172dp"
+        android:queryHint="Buscar"
+        android:background="@color/colorWhite"
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/inicio_recycler"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="415dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inicio_toolbar" />
+
+
 </android.support.constraint.ConstraintLayout>
