--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -6,86 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Perfil.Perfil">
 
-    <Button
-        android:id="@+id/btn_editar_perfil"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        android:background="@drawable/edit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/perfil_foto_usuario"
-        android:layout_width="186dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="36dp"
-        android:src="@drawable/fotoperfiljuego"
-        app:civ_border_color="#FF000000"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/frag_perfil_principal"
         android:layout_width="match_parent"
-        android:layout_height="380dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        android:paddingBottom="60sp"
+        android:layout_height="512dp"
+        app:layout_constraintBottom_toTopOf="@+id/include_perfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/perfil_foto_usuario">
-
-        <TextView
-            android:id="@+id/perfil_nombres"
-            android:layout_width="118dp"
-            android:layout_height="30dp"
-            android:text="Nombres" />
-
-        <TextView
-            android:id="@+id/perfil_apellidos"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Apellidos" />
-
-        <TextView
-            android:id="@+id/perfil_dni"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="DNI" />
-
-        <TextView
-            android:id="@+id/perfil_telefono"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="telefono" />
-
-        <TextView
-            android:id="@+id/perfil_correo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="correo" />
-
-        <TextView
-            android:id="@+id/perfil_direccion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Dirección" />
-
-        <Button
-            android:id="@+id/btn_cerrar_sesion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="80dp"
-            android:text="@string/perfil_cerrar_sesion"
-            android:theme="@style/AppTheme.Bienvenida_Button" />
-
-    </LinearLayout>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/include_perfil"
