--- a/app/src/main/res/layout/fragment_perfil_ejm.xml
+++ b/app/src/main/res/layout/fragment_perfil_ejm.xml
@@ -1,13 +1,93 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.educasa.Perfil.PerfilFragments.PerfilEjm">
+    tools:context=".Perfil.Perfil">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
+        android:id="@+id/btn_editar_perfil"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/edit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/perfil_foto_usuario"
+        android:layout_width="186dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="44dp"
+        android:src="@drawable/fotoperfiljuego"
+        app:civ_border_color="#FF000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+        android:layout_width="290dp"
+        android:layout_height="307dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        android:paddingBottom="60sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/perfil_foto_usuario">
+
+        <TextView
+            android:id="@+id/perfil_nombres"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:text="Nombres" />
+
+        <TextView
+            android:id="@+id/perfil_apellidos"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:text="Apellidos" />
+
+        <TextView
+            android:id="@+id/perfil_dni"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:text="DNI" />
+
+        <TextView
+            android:id="@+id/perfil_telefono"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:text="telefono" />
+
+        <TextView
+            android:id="@+id/perfil_correo"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:text="correo" />
+
+        <TextView
+            android:id="@+id/perfil_direccion"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:text="Dirección" />
+
+        <Button
+            android:id="@+id/btn_cerrar_sesion"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="@string/perfil_cerrar_sesion"
+            android:theme="@style/AppTheme.Bienvenida_Button" />
+
+    </LinearLayout>
+
+    <include
+        android:id="@+id/include_perfil"
+        layout="@layout/menuxml"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
