--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -8,13 +8,13 @@
 
     <FrameLayout
         android:id="@+id/frag_perfil_principal"
-        android:layout_width="match_parent"
-        android:layout_height="512dp"
-        app:layout_constraintBottom_toTopOf="@+id/include_perfil"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/include_perfil"
+        />
     <include
         android:id="@+id/include_perfil"
         layout="@layout/menuxml"
