--- a/app/src/main/res/layout/dialog_inicio_detalle_profesores.xml
+++ b/app/src/main/res/layout/dialog_inicio_detalle_profesores.xml
@@ -37,7 +37,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:gravity="center_horizontal"
+        android:textAlignment="center"
         android:text="Nombre"
         android:textSize="18dp"
         android:textStyle="bold"
