login y seleccion de usuario y firestore a modulos inicio misclases perfil

--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -33,15 +33,14 @@
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="88dp"
         android:text="@string/bienvenida_iniciar_sesion"
         android:theme="@style/AppTheme.Bienvenida_Button"
-        app:layout_constraintBottom_toTopOf="@+id/btn_crear_cuenta"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+<!--    <Button
         android:id="@+id/btn_crear_cuenta"
         android:layout_width="145dp"
         android:layout_height="55dp"
@@ -52,7 +51,7 @@
         android:theme="@style/AppTheme.Bienvenida_Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />-->
 
 
 
