--- a/app/src/main/res/layout/fragment_bienvenida_fragment1.xml
+++ b/app/src/main/res/layout/fragment_bienvenida_fragment1.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="@drawable/img_bienvenida_fondo"
-tools:context="com.example.educasa.Bienvenida.BienvenidaFragments.BienvenidaFragment1">
+tools:context=".Bienvenida.BienvenidaFragments.BienvenidaFragment1">
 
 <androidx.viewpager.widget.ViewPager
     android:id="@+id/container"
