--- a/app/src/main/res/layout/fragment_chat_detalle.xml
+++ b/app/src/main/res/layout/fragment_chat_detalle.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.educasa.Chat.ChatFragments.ChatDetalle">
+    tools:context=".Chat.ChatFragments.ChatDetalle">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/chat_toolbar_detalle"
         android:layout_width="match_parent"
