--- a/app/src/main/res/layout/fragment_chat_ejm.xml
+++ b/app/src/main/res/layout/fragment_chat_ejm.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.educasa.Chat.ChatFragments.ChatEjm">
+    tools:context=".Chat.ChatFragments.ChatEjm">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/chat_toolbar"
         android:layout_width="match_parent"
