--- a/app/src/main/res/layout/fragment_editar_perfil.xml
+++ b/app/src/main/res/layout/fragment_editar_perfil.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.educasa.Perfil.PerfilFragments.PerfilEditar">
+    tools:context=".Perfil.PerfilFragments.PerfilEditar">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/perfil_editar_toolbar"
