--- a/app/src/main/res/layout/fragment_inicio_ejm.xml
+++ b/app/src/main/res/layout/fragment_inicio_ejm.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryAlpha"
-    tools:context="com.example.educasa.Inicio.InicioFragments.InicioEjm">
+    tools:context=".Inicio.InicioFragments.InicioEjm">
 
     <ImageView
         android:id="@+id/imageView"
