--- a/app/src/main/res/layout/fragment_mis_clases_ejm.xml
+++ b/app/src/main/res/layout/fragment_mis_clases_ejm.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.educasa.MisClases.MisClasesFragments.MisClasesEjm">
+    tools:context=".MisClases.MisClasesFragments.MisClasesEjm">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/misclases_toolbar"
         android:layout_width="match_parent"
