--- a/app/src/main/res/layout/fragment_solicitudes_detalle.xml
+++ b/app/src/main/res/layout/fragment_solicitudes_detalle.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.educasa.Solicitudes.SolicitudesFragments.SolicitudesDetalle">
+    tools:context=".Solicitudes.SolicitudesFragments.SolicitudesDetalle">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/solicitudes_toolbar_detalle"
         android:layout_width="match_parent"
