--- a/app/src/main/res/layout/fragment_solicitudes_ejm.xml
+++ b/app/src/main/res/layout/fragment_solicitudes_ejm.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.educasa.Solicitudes.SolicitudesFragments.SolicitudesEjm">
+    tools:context=".Solicitudes.SolicitudesFragments.SolicitudesEjm">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/solicitudes_toolbar"
         android:layout_width="match_parent"
